--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section class="heading">
         <header class="hero">
           <img
-            src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Ffree%2F&psig=AOvVaw3uG5t3a_fySvxuXDMRk85y&ust=1750450449667000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNDYnaum_o0DFQAAAAAdAAAAABAk"
+            src="https://images.app.goo.gl/wfNqYvRUKPwk4mnh7"
             alt="freecodecamp logo"
             loading="lazy"
             class="hero-img"
