--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section class="heading">
         <header class="hero">
           <img
-            src="https://images.app.goo.gl/wfNqYvRUKPwk4mnh7"
+            src="https://cdn.freecodecamp.org/platform/universal/fcc_meta_1920X1080-indigo.png"
             alt="freecodecamp logo"
             loading="lazy"
             class="hero-img"
